k8s/app-manifest/j26-photo-permission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-permission
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: photo-permission
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: photo-permission
    spec:
      containers:
        - name: photo-permission
          image: ghcr.io/scouterna/j26-photo-permission:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
            limits:
              cpu: 300m
              memory: 128Mi
      terminationGracePeriodSeconds: 30
