k8s/app-manifest/j26-photo-permission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-permission
  labels:
    app: photo-permission
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: photo-permission
